--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -84,7 +84,7 @@ $gap-section: 4rem;
 }
 
 @mixin mobile {
-  @media (max-width: 501px) { 
+  @media (max-width: 450px) { 
     @content;
   }
 }
